域对象共享数据

--- a/spring_mvc_demo/src/main/webapp/WEB-INF/templates/index.html
+++ b/spring_mvc_demo/src/main/webapp/WEB-INF/templates/index.html
@@ -31,5 +31,10 @@
         密码:<input type="text"  name="password"><br>
         <input type="submit" value="提交"><br>
     </form>
+    <hr>
+    <a th:href="@{/modelandview/test}">ModelAndView向request域对象共享数据测试</a><br>
+    <a th:href="@{/model/test}">Model向request域对象共享数据测试</a><br>
+    <a th:href="@{/modelmap/test}">ModelMap向request域对象共享数据测试</a><br>
+    <a th:href="@{/map/test}">Map向request域对象共享数据测试</a><br>
 </body>
 </html>
