--- a/spring_mvc_demo/src/main/webapp/WEB-INF/templates/success.html
+++ b/spring_mvc_demo/src/main/webapp/WEB-INF/templates/success.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>测试成功</h1>
+    <h1>测试成功</h1><br>
+    <p th:text="${modelandviewrequestscope}"></p>
+    <p th:text="${modeltest}"></p>
+    <p th:text="${modelmaptest}"></p>
+    <p th:text="${maptest}"></p>
 </body>
 </html>
