域对象共享数据     向request域对象共享数据     向session域对象共享数据 SpringMVC的视图     ThymeleafView视图     转发视图     重定向视图 视图控制器view-controller

--- a/spring_mvc_demo/src/main/webapp/WEB-INF/templates/index.html
+++ b/spring_mvc_demo/src/main/webapp/WEB-INF/templates/index.html
@@ -36,5 +36,8 @@
     <a th:href="@{/model/test}">Model向request域对象共享数据测试</a><br>
     <a th:href="@{/modelmap/test}">ModelMap向request域对象共享数据测试</a><br>
     <a th:href="@{/map/test}">Map向request域对象共享数据测试</a><br>
+<hr>
+    <a th:href="@{/session/test}">HttpSessionServlet向session域对象共享数据测试</a><br>
+    <a th:href="@{/application/test}">ApplicationRequest向session域对象共享数据测试</a>
 </body>
 </html>
