--- a/spring_mvc_demo/src/main/webapp/WEB-INF/templates/success.html
+++ b/spring_mvc_demo/src/main/webapp/WEB-INF/templates/success.html
@@ -10,5 +10,7 @@
     <p th:text="${modeltest}"></p>
     <p th:text="${modelmaptest}"></p>
     <p th:text="${maptest}"></p>
+    <p th:text="${session.HttpsessionRequestTest}"></p>
+    <p th:text="${application.ApplicationRequestScopeTest}"></p>
 </body>
 </html>
