--- a/spring_mvc_rest/src/main/webapp/WEB-INF/templates/success.html
+++ b/spring_mvc_rest/src/main/webapp/WEB-INF/templates/success.html
@@ -9,5 +9,8 @@
 <hr>
     <p th:text="${getAllUser}"></p><br>
     <p th:text="${getUser}"></p><br>
+    <p th:text="${addUser}"></p><br>
+    <p th:text="${updateUser}"></p><br>
+    <p th:text="${deleteUser}"></p><br>
 </body>
 </html>
