--- a/spring_mvc_rest/src/main/webapp/WEB-INF/templates/index.html
+++ b/spring_mvc_rest/src/main/webapp/WEB-INF/templates/index.html
@@ -20,6 +20,7 @@
         <input type="hidden"  name="_method" value="DELETE"/>
         <input type="submit" value="删除用户信息">
     </form>
-
+<hr>
+    <a th:href="@{/employee}">查询所有员工信息</a>
 </body>
 </html>
