--- a/spring_mvc_rest/src/main/webapp/WEB-INF/templates/employee.html
+++ b/spring_mvc_rest/src/main/webapp/WEB-INF/templates/employee.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>员工信息</title>
+    <link rel="stylesheet" th:href="@{/static/css/index_work.css}">
+    <script type="text/javascript" th:src="@{/static/js/vue.js}"></script>
 </head>
 <body>
+<div id="app">
     <table>
         <tr>
             <th colspan="5">员工信息列表</th>
@@ -14,7 +17,7 @@
             <th>lastName</th>
             <th>email</th>
             <th>gender</th>
-            <th>options</th>
+            <th>options(<a th:href="@{/to/add}">新增</a>)</th>
         </tr>
         <tr th:each="employee:${employees}">
             <td th:text="${employee.id}"></td>
@@ -22,10 +25,32 @@
             <td th:text="${employee.email}"></td>
             <td th:text="${employee.gender}"></td>
             <td>
-                <a th:href="update">修改</a>
-                <a th:href="delete">删除</a>
+                <a th:href="@{'/employee/'+${employee.id}}">修改</a>
+                <a @click="deleteEmployee()" th:href="@{|/employee/${employee.id}|}">删除</a>
             </td>
         </tr>
     </table>
+    <form method="post">
+        <input type="hidden" name="_method" value="delete">
+    </form>
+</div>
+<script type="text/javascript">
+    var vue = new Vue({
+        el:"#app",
+        methods:{
+            deleteEmployee(){
+                //获取form表单
+                var form = document.getElementsByTagName("form")[0];
+                //将超链接的href属性值赋值给form表单的action属性
+                //event.target表示当前触发事件的标签
+                form.action = event.target.href;
+                //表单提交
+                form.submit();
+                //阻止超链接的默认行为
+                event.preventDefault();
+            }
+        }
+    });
+</script>
 </body>
 </html>
