使用@ResponseBody注解响应json格式数据

--- a/spring_mvc_ajax/src/main/webapp/WEB-INF/templates/index.html
+++ b/spring_mvc_ajax/src/main/webapp/WEB-INF/templates/index.html
@@ -11,13 +11,16 @@
         <h1  @click="AjaxTest1">首页</h1>
         <input @click="AjaxTest" type="button" value="SpringMVC处理Ajax请求"><br>
         <input @click="AxiosRequestBodyTest" type="button" value="@RequestBody处理Axios请求"><br>
+        <input @click="ResponseBodyReturnJsonTest" type="button" value="@ResponseBody响应json格式数据"><br>
         <div ref="qwer">{{shadiao}}</div>
+        <div>{{req}}</div>
         <div>{{resp}}</div>
     </div>
     <script type="text/javascript">
         var vue = new Vue({
             el:"#app",
             data:{  shadiao:"",
+                    req:"",
                     resp:""
             },
             methods:{
@@ -34,6 +37,14 @@
                         "/axios/requestbody/test",
                         {username:"ljc",password:"qwe123",age:22,gender:0}
                     ).then(Response=>{
+                        console.log(Response.data);
+                        this.req = (Response.data);
+                    })
+                },
+                ResponseBodyReturnJsonTest(){
+                    axios.post(
+                        "/responseBody/returnjson/test"
+                    ).then(Response =>{
                         console.log(Response.data);
                         this.resp = (Response.data);
                     })
